# CHWPFullTest

./: .dockerignore  .gitattributes  .gitignore  AUDIT_AND_REVISION_REPORT.md  CITATION.cff  Dockerfile  LICENSE  README.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
configs/: custom_controller.yaml  fault_free.yaml  pump_stuck.yaml  sensor_bias.yaml  smoke_test.yaml
docs/: architecture.md  controller_interface.md  docker_usage.md  fault_scenario_configuration.md  installation.md  kpi_definitions.md  quick_start.md  reproducibility.md
examples/: compare_ftc_kpi.py  custom_controller_template.py  run_fault_free_rbc.py  run_pump_stuck_rbc.py  run_sensor_bias_rbc.py
models/: DataCenterCHWP_HybridFault.fmu
src/chwplantfulltest/: __init__.py  __main__.py  config.py  controllers.py  io.py  metrics.py  runner.py  scenarios.py  simulation.py
src/chwplantfulltest/control/: __init__.py  controller_base.py  default_rbc_controller.py
src/chwplantfulltest/kpi/: ftc_kpi.py  generic_kpi.py
src/chwplantfulltest/utils/: __init__.py  state_manager.py
tests/: test_config_loading.py  test_ftc_kpi_calculation.py  test_import.py  test_kpi_calculation.py  test_smoke_rbc.py
user_controllers/: sample_controller.py
weather/: CHN_Guangdong.Shenzhen.594930_SWERA.mos
